clusters/production/system/lldap/lldap-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lldap
  namespace: lldap
spec:
  template:
    spec:
      containers:
        - name: lldap
